--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,9 +48,38 @@ pre code {
 }
 
 /* searchForm */
-.result-list-width {
-  width: 330px;
+.autocomplete-img-style {
+  width: 45px;
+  height: 45px;
+  object-fit: cover;
 }
+
+.dropdown-position {
+  top: 35px;
+}
+
+.form-control:focus {
+  border-color: #ffc107;
+  box-shadow: none;
+}
+
+.result-list-width {
+  width: 385px;
+  color: black;
+}
+
+@media all and (min-width: 321px) and (max-width: 414px) {
+  .result-list-width {
+    width: 320px;
+  }
+}
+
+@media all and (max-width: 320px) {
+  .result-list-width {
+    width: 270px;
+  }
+}
+
 .overlay-style {
   width: 100%;
   height: 100%;
@@ -61,4 +90,9 @@ pre code {
   right: 0;
   bottom: 0;
   z-index: -1;
+}
+
+/* characters in books */
+.long-content {
+  overflow: hidden;
 }
